<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interval_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/configure_interval_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <RadioGroup
        android:id="@+id/interval_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interval_label">

        <RadioButton
            android:id="@+id/interval_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_interval_15" />

        <RadioButton
            android:id="@+id/interval_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/configure_interval_30" />

        <RadioButton
            android:id="@+id/interval_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_interval_60" />
    </RadioGroup>

    <TextView
        android:id="@+id/threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/configure_threshold_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interval_group" />

    <TextView
        android:id="@+id/threshold_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="0.15%"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/threshold_label" />

    <SeekBar
        android:id="@+id/threshold_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="19"
        android:progress="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/threshold_value" />

    <Button
        android:id="@+id/add_widget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/configure_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/threshold_seekbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
